--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,2 +1,3 @@
 birthday.subject=Happy birthday!
-birthday.message=Happy birthday, dear {0}!
+birthday.message=Happy birthday, dear {0}!<br>
+discount.message=We offer special discount {0} off for the following items:<br>{1}<br>
